# audit-logging

./: .env  .gitignore  README.md  pyproject.toml
src/audit_logging/: apps.py  middleware.py  tests.py  utils.py
src/django_project/: settings.py
